--- a/Resturaunt_web/Views/Home/Index.cshtml
+++ b/Resturaunt_web/Views/Home/Index.cshtml
@@ -1,28 +1,85 @@
-﻿@{
-    ViewData["Title"] = "Homepage";
-    Layout = "/Views/Shared/_HeaderLayout.cshtml";
+﻿@model IEnumerable<Resturaunt_web.Models.Users>
+@{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/main.css" />
+<link rel="stylesheet" href="~/css/admin.css" />
+
+<div class="return">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
+</div>
+
+<h1>Reservation Management</h1>
+
+<div class="container  p-4 mb-4">
+    <div class="table">
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Reserve">Create New</a>
+        </p>
+        <table style="width:100%">
+            
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.FName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.LName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Date)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Time)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NumPeople)
+                    </th>
+
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Phone)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Date)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Time)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NumPeople)
+                    </td>
 
 
-<html>
-<body>
-    <div class="special">
-        
-    </div>
-    <div class="reservation">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reservation"><button>Reserve</button></a>
-    </div>
-    <div class="menu">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Menu"><button>Menu</button></a>
-    </div>
-    <div class="social">
-        <div class ="socialLinks">
-
-        </div>
-        <div class="socialPhotos">
-
-        </div>
-    </div>
-</body>
-</html> 
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Phone)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.UserId">Edit</a>
+                        <a asp-action="Details" asp-route-id="@item.UserId">Details</a>
+                        <a asp-action="Delete" asp-route-id="@item.UserId">Delete</a>
+                    </td>
+                </tr>
+                }
+            </tbody>
+        </table>
+    </div> 
+    </div> 
