--- a/Resturaunt_web/Views/Home/Index.cshtml
+++ b/Resturaunt_web/Views/Home/Index.cshtml
@@ -2,11 +2,8 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/admin.css" />
+<link rel="stylesheet" href="~/css/main.css" />
 
-<div class="return">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
-</div>
 
 <html>
 <body>
