--- a/Resturaunt_web/Views/Home/Reservation.cshtml
+++ b/Resturaunt_web/Views/Home/Reservation.cshtml
@@ -1,4 +1,4 @@
-@model Resturaunt_web.Models.Users
+@model Resturaunt_web.Models.Reservations
 
 @{
     ViewData["Title"] = "Reservation";
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="return">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Return</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Return</a>
 
     </div>
 
@@ -30,18 +30,11 @@
 
                 <div class="col">
 
-                    <label asp-for="FName">First Name:</label>
-                    <input asp-for="FName" class="form-control" type="text" name="name" id="name" required>
+                    <label asp-for="Name">First Name:</label>
+                    <input asp-for="Name" class="form-control" type="text" name="name" id="name" required>
 
-                    <span asp-validation-for="FName" class="text-danger"></span>
+                    <span asp-validation-for="Name" class="text-danger"></span>
 
-                </div>
-                <div class="col">
-
-
-                    <label asp-for="LName">Last Name:</label>
-                    <input asp-for="LName" class="form-control" type="text" name="name" id="name" required>
-                    <span asp-validation-for="LName" class="text-danger"></span>
                 </div>
             </div>
             <div class="row">
@@ -51,7 +44,7 @@
 
                     <label asp-for="Date"> Date:</label>
 
-                    <input asp-for="Date" class="form-control" type="date" id="start" name="trip-start"
+                    <input asp-for="Date" class="form-control" type="date"
                            value="2022-07-22"
                            min="2022-01-01" max="2022-12-31">
                     <span asp-validation-for="Date" class="text-danger"></span>
@@ -61,7 +54,7 @@
 
                     <label asp-for="Time">Choose a time for your Reservation:</label>
 
-                    <input asp-for="Time" class="form-control" type="time" id="appt" name="appt"
+                    <input asp-for="Time" class="form-control" type="time"
                            min="00:00" max="24:00" required>
                     <span asp-validation-for="Time" class="text-danger"></span>
                 </div>
@@ -70,28 +63,30 @@
             <div>
                 <label asp-for="NumPeople">Number of People:</label>
 
-                <input asp-for="NumPeople" class="form-control" type="number" id="tentacles" name="tentacles"
+                <input asp-for="NumPeople" class="form-control" type="number"
                        min="1" max="100">
                 <span asp-validation-for="NumPeople" class="text-danger"></span>
             </div>
 
+            
             <div class="row">
                 <div class="col">
 
-                    <label asp-for="Email">Email:</label>
-                    <input asp-for="Email" class="form-control" type="email" name="email" id="email" required>
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                    <label>Email:</label>
+                    <input class="form-control" type="email" name="email" id="email" required>
+                    <span class="text-danger"></span>
                 </div>
                 <div class="col">
 
 
-                    <label asp-for="Phone">Phone Number:</label>
+                    <label>Phone Number:</label>
 
-                    <input asp-for="Phone" class="form-control" type="tel" id="phone" name="phone"
+                    <input class="form-control" type="tel" id="phone" name="phone"
                            pattern="[0-9]{10}" required>
-                    <span asp-validation-for="Phone" class="text-danger"></span>
+                    <span class="text-danger"></span>
                 </div>
             </div>
+            
 
 
 
