--- a/Resturaunt_web/Views/Users/Index.cshtml
+++ b/Resturaunt_web/Views/Users/Index.cshtml
@@ -22,19 +22,16 @@
                 <thead>
                     <tr>
                         <th>
-                            @Html.DisplayNameFor(model => model.FirstName)
+                            @Html.DisplayNameFor(model => model.FName)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.LastName)
+                            @Html.DisplayNameFor(model => model.FName)
                         </th>
                         <th>
                             @Html.DisplayNameFor(model => model.Email)
                         </th>
                         <th>
                             @Html.DisplayNameFor(model => model.Phone)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Password)
                         </th>
                         <th></th>
                     </tr>
@@ -44,19 +41,16 @@
                     {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.FirstName)
+                                @Html.DisplayFor(modelItem => item.FName)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastName)
+                                @Html.DisplayFor(modelItem => item.LName)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Email)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Phone)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Password)
                             </td>
                             <td>
                                 <a asp-action="Edit" asp-route-id="@item.UserId">Edit</a> |
