--- a/Resturaunt_web/Views/Menus/Create.cshtml
+++ b/Resturaunt_web/Views/Menus/Create.cshtml
@@ -4,18 +4,20 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/admin.css" />
 
-<div class="return">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">Return</a>
-</div>
+<h1>Create</h1>
 
-<h1>Create Menu Item</h1>
-
+<h4>Menu</h4>
+<hr />
 <div class="row">
-    <div class="col-md-4 container">
-        <form asp-action="Create">
+    <div class="col-md-4">
+        <form asp-action="Create" enctype="multipart/form-data">>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+           <div class="form-group">
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input asp-for="ImageFile" accept="image/*" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -25,6 +27,11 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FoodType" class="control-label"></label>
+                <input asp-for="FoodType" class="form-control" />
+                <span asp-validation-for="FoodType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
@@ -38,7 +45,7 @@
     </div>
 </div>
 
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
