--- a/Resturaunt_web/Views/Menus/Edit.cshtml
+++ b/Resturaunt_web/Views/Menus/Edit.cshtml
@@ -4,19 +4,21 @@
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/admin.css" />
-
-<div class="return">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Index">Return</a>
-</div>
 
 <h1>Edit</h1>
 
+<h4>Menu</h4>
+<hr />
 <div class="row">
-    <div class="container col-md-4">
+    <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MenuId" />
+            <div class="form-group">
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -26,6 +28,11 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FoodType" class="control-label"></label>
+                <input asp-for="FoodType" class="form-control" />
+                <span asp-validation-for="FoodType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
@@ -39,6 +46,7 @@
     </div>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
