--- a/Resturaunt_web/Views/Menus/Edit.cshtml
+++ b/Resturaunt_web/Views/Menus/Edit.cshtml
@@ -4,21 +4,19 @@
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
+<link rel="stylesheet" href="~/css/admin.css" />
+
+<div class="return">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Index">Return</a>
+</div>
 
 <h1>Edit</h1>
 
-<h4>Menu</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="container col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MenuId" />
-            <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -28,11 +26,6 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FoodType" class="control-label"></label>
-                <input asp-for="FoodType" class="form-control" />
-                <span asp-validation-for="FoodType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
@@ -46,7 +39,6 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
