fixed images (Not Loading)

--- a/Resturaunt_web/Views/Home/AdminHomepage.cshtml
+++ b/Resturaunt_web/Views/Home/AdminHomepage.cshtml
@@ -46,7 +46,7 @@
                     <p>User Manager</p>
                 </div>
             </a>
-            <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Menus1" asp-action="Index">
                 <div class="AdminOption" style="width:400px; height:300px;">
                     <p>Menu Manager</p>
                 </div>
