--- a/Resturaunt_web/Views/Menus/Create.cshtml
+++ b/Resturaunt_web/Views/Menus/Create.cshtml
@@ -4,16 +4,20 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
+<link rel="stylesheet" href="~/css/admin.css" />
 
-<h1>Create</h1>
+<div class="return">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">Return</a>
+</div>
 
-<h4>Menu</h4>
-<hr />
+<h1>Create Item</h1>
+
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">>
+        <form asp-action="Create" enctype="multipart/form-data">
+            >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-           <div class="form-group">
+            <div class="form-group">
                 <label asp-for="ImageFile" class="control-label"></label>
                 <input asp-for="ImageFile" accept="image/*" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
@@ -43,9 +47,5 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
