--- a/Resturaunt_web/Views/Menus/Edit.cshtml
+++ b/Resturaunt_web/Views/Menus/Edit.cshtml
@@ -4,20 +4,23 @@
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
+<link rel="stylesheet" href="~/css/admin.css" />
+
+<div class="return">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">Return</a>
+</div>
 
 <h1>Edit</h1>
 
-<h4>Menu</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="container col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MenuId" />
             <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input asp-for="ImageFile" class="form-control" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -44,9 +47,5 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
