--- a/Resturaunt_web/Views/Menus1/Delete.cshtml
+++ b/Resturaunt_web/Views/Menus1/Delete.cshtml
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="~/css/admin.css" />
 
 <div class="return">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">Return</a>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Menus1" asp-action="Index">Return</a>
 </div>
 
 <h1>Delete Item</h1>
