--- a/Resturaunt_web/Views/Home/Index.cshtml
+++ b/Resturaunt_web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reservation"><button>Reserve</button></a>
     </div>
     <div class="menu">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Menu"><button>Menu</button></a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Menus1" asp-action="Menu"><button>Menu</button></a>
     </div>
     <div class="social">
         <div class ="socialLinks">
