--- a/Resturaunt_web/Views/Menus1/Menu.cshtml
+++ b/Resturaunt_web/Views/Menus1/Menu.cshtml
@@ -12,13 +12,16 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Return</a>
         </div>
         <div class="menu">
+            
             <div class="container p-4 mb-4">
                 <div class="table">
                     <table style="width:100%">
 
-
+                
                         <thead>
                             <tr>
+                                <th>
+                                </th>
                                 <th>
                                     @Html.DisplayNameFor(model => model.Name)
                                 </th>
@@ -34,17 +37,20 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Description)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Price)
-                                </td>
-                            </tr>
+                                <tr>
+                                    <td>
+                                        <img src="~/image/@item.Image" asp-append-version="true" width="100" height="100" />
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Description)
+                                    </td>
+                                    <td>
+                                        $@Html.DisplayFor(modelItem => item.Price)
+                                    </td>
+                                </tr>
                             }
                         </tbody>
                     </table>
