--- a/Resturaunt_web/Views/Home/Index.cshtml
+++ b/Resturaunt_web/Views/Home/Index.cshtml
@@ -7,8 +7,16 @@
 
 <html>
 <body>
-    <div class="special">
-        
+    <div class="special row">
+        <div class="column" style="width:40%">
+            <p tag="DealTitle" class="center DealTitle">Free Garlic Bread!</p>
+            <p tag="DealDesc" class="center DealDesc">With orders over $40, get a complimentary garlic bread.</p>
+            <p tag="DealCond" class="center DealCond">Only redeemable once per table</p>
+            <p tag="DealExp" class="center DealExp">Expires: 20/06/2022</p>
+        </div>
+        <div class="column" style="width:60%;">
+            <img tag="DealImg" class="DealImg" src="~/Theme/img/Deal.jpg" />
+        </div>
     </div>
     <div class="reservation">
         <div class="center" style="height:300px;">
@@ -32,20 +40,22 @@
 
         </div>
         <div class="socialPhotos">
-            <div class="socialColumn">
-                <img src="~/Theme/img/Food/1.jpg" />
-                <img src="~/Theme/img/Food/2.jpg" />
-            </div>
-            <div class="socialColumn">
-                <img src="~/Theme/img/Food/7.jpg" />
-            </div>
-            <div class="socialColumn">
-                <img src="~/Theme/img/Food/4.jpg" />
-                <img src="~/Theme/img/Food/5.jpg" />
-            </div>
-            <div class="socialColumn">
-                <img src="~/Theme/img/Food/6.jpg" />
-                <img src="~/Theme/img/Food/3.jpg" />
+            <div class="row" style="height:420px">
+                <div class="socialColumn">
+                    <img src="~/Theme/img/Food/1.jpg" />
+                    <img src="~/Theme/img/Food/2.jpg" />
+                </div>
+                <div class="socialColumn">
+                    <img src="~/Theme/img/Food/7.jpg" />
+                </div>
+                <div class="socialColumn">
+                    <img src="~/Theme/img/Food/4.jpg" />
+                    <img src="~/Theme/img/Food/5.jpg" />
+                </div>
+                <div class="socialColumn">
+                    <img src="~/Theme/img/Food/6.jpg" />
+                    <img src="~/Theme/img/Food/3.jpg" />
+                </div>
             </div>
         </div>
     </div>
