--- a/Resturaunt_web/wwwroot/css/main.css
+++ b/Resturaunt_web/wwwroot/css/main.css
@@ -14,6 +14,7 @@
 .special {
     height: 600px;
     width:100%;
+    margin: 0px;
 }
 
 .reservation {
@@ -41,10 +42,10 @@
 
 .socialPhotos {
     width: 100%;
-    height: 600px;
     display: flex;
     flex-wrap: wrap;
-    padding: 0 4px;
+    margin: 0px;
+    place-content:center;
 }
 
 .return {
@@ -72,6 +73,8 @@
 .socialColumn {
     flex: 25%;
     padding: 0 4px;
+    height: 500px;
+    object-fit: cover;
 }
 
     .socialColumn img {
@@ -80,3 +83,29 @@
         width: 100%;
         border: black solid 1px;
     }
+
+.DealTitle {
+    font-size: 62px;
+    font-weight: 500;
+    margin-top: 150px;
+}
+
+.DealDesc {
+    font-size: 24px;
+    margin-bottom: 52px;
+}
+
+.DealCond {
+    font-size: 12px;
+    margin-bottom:0px;
+}
+
+.DealExp {
+    font-size: 12px;
+    margin-bottom: 0px;
+}
+
+.DealImg {
+    height: 600px;
+    float:right;
+}
