--- a/Resturaunt_web/Views/Home/Reservation.cshtml
+++ b/Resturaunt_web/Views/Home/Reservation.cshtml
@@ -1,4 +1,4 @@
-@model Resturaunt_web.Models.Reservations
+@model Resturaunt_web.Models.Reservations1
 
 @{
     ViewData["Title"] = "Reservation";
@@ -37,29 +37,30 @@
 
                 </div>
             </div>
+            <!--
             <div class="row">
 
-                <div class="col">
+                    <div class="col">
 
 
-                    <label asp-for="Date"> Date:</label>
+                        <label asp-for="Date"> Date:</label>
 
-                    <input asp-for="Date" class="form-control" type="date"
-                           value="2022-07-22"
-                           min="2022-01-01" max="2022-12-31">
-                    <span asp-validation-for="Date" class="text-danger"></span>
+                        <input asp-for="Date" class="form-control" type="date"
+                               value="2022-07-22"
+                               min="2022-01-01" max="2022-12-31">
+                        <span asp-validation-for="Date" class="text-danger"></span>
+                    </div>
+                    <div class="col">
+
+
+                        <label asp-for="Time">Choose a time for your Reservation:</label>
+
+                        <input asp-for="Time" class="form-control" type="time"
+                               min="00:00" max="24:00" required>
+                        <span asp-validation-for="Time" class="text-danger"></span>
+                    </div>
                 </div>
-                <div class="col">
-
-
-                    <label asp-for="Time">Choose a time for your Reservation:</label>
-
-                    <input asp-for="Time" class="form-control" type="time"
-                           min="00:00" max="24:00" required>
-                    <span asp-validation-for="Time" class="text-danger"></span>
-                </div>
-            </div>
-
+    -->
             <div>
                 <label asp-for="NumPeople">Number of People:</label>
 
@@ -68,7 +69,7 @@
                 <span asp-validation-for="NumPeople" class="text-danger"></span>
             </div>
 
-            
+
             <div class="row">
                 <div class="col">
 
@@ -86,7 +87,7 @@
                     <span class="text-danger"></span>
                 </div>
             </div>
-            
+
 
 
 
