--- a/Resturaunt_web/Views/Reservations1/Edit.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Edit.cshtml
@@ -2,15 +2,18 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
+<link rel="stylesheet" href="~/css/admin.css" />
+
+<div class="return">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Reservations1" asp-action="Index">Return</a>
+</div>
 
 <h1>Edit</h1>
 
-<h4>Reservations1</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="container col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Reservation_Id" />
@@ -46,9 +49,6 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
