--- a/Resturaunt_web/Views/Reservations1/Index.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Index.cshtml
@@ -2,59 +2,69 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
+<link rel="stylesheet" href="~/css/admin.css" />
 
-<h1>Index</h1>
+<div class="return">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NumPeople)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Booked_time)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NumPeople)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Booked_time)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Reservation_Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Reservation_Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Reservation_Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<h1>Reservations Manager</h1>
+
+<div class="container  p-4 mb-4">
+    <div class="table">
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Create">Create New</a>
+        </p>
+        <table style="width:100%">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Phone)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NumPeople)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Booked_time)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Phone)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NumPeople)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Booked_time)
+                        </td>
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@item.Reservation_Id">Edit</a>
+                            <a asp-action="Details" asp-route-id="@item.Reservation_Id">Details</a>
+                            <a asp-action="Delete" asp-route-id="@item.Reservation_Id">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
