--- a/Resturaunt_web/Views/Home/Index.cshtml
+++ b/Resturaunt_web/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     </div>
     <div class="reservation">
         <div class="center" style="height:300px;">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reservation">Reserve</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Reservations1" asp-action="Reservation">Reserve</a>
         </div>
     </div>
     <div class="menu row">
