--- a/Resturaunt_web/Views/Menus1/Create.cshtml
+++ b/Resturaunt_web/Views/Menus1/Create.cshtml
@@ -13,7 +13,7 @@
 <h1>Create Item</h1>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 container">
         <form asp-action="Create" enctype="multipart/form-data">
             >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
