--- a/Resturaunt_web/Views/Registered_Customers/Create.cshtml
+++ b/Resturaunt_web/Views/Registered_Customers/Create.cshtml
@@ -13,7 +13,7 @@
 <h1>Create User</h1>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 container">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
