--- a/Resturaunt_web/Views/Reservations1/Reservation.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Reservation.cshtml
@@ -1,19 +1,20 @@
-﻿@model Resturaunt_web.Models.Reservations1
+@model Resturaunt_web.Models.Reservations1
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/admin.css" />
+<link rel="stylesheet" href="~/css/main.css" />
 
 <div class="return">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Reservations1" asp-action="Index">Return</a>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Return</a>
 </div>
 
-<h1>Create Item</h1>
+
 
 <div class="row">
     <div class="col-md-4 container">
+        <h1>Create Reservation</h1>
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -47,7 +48,3 @@
         </form>
     </div>
 </div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
