--- a/Resturaunt_web/Views/Home/Index.cshtml
+++ b/Resturaunt_web/Views/Home/Index.cshtml
@@ -35,9 +35,11 @@
     </div>
     <div class="social">
         <div class="socialLinks">
-            <a>Instagram</a>
-            <a>Facebook</a>
-
+            <span class="center" style="padding-top: 50px">
+                <img src="~/Theme/img/Instagram.png" style="padding-right:50px;" />
+                <img src="~/Theme/img/Facebook.png"  />
+            </span>
+            <p class="center">Follow us on Instagram and Facebook!</p>
         </div>
         <div class="socialPhotos">
             <div class="row" style="height:420px">
