--- a/Resturaunt_web/Views/Menus1/Menu.cshtml
+++ b/Resturaunt_web/Views/Menus1/Menu.cshtml
@@ -10,10 +10,20 @@
 <body>
     <div class="return">
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Return</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Menus1" asp-action="Drinks">Drinks</a>
     </div>
     <div class="menu">
-
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Starters">Starters</a>
+        </p>
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Mains">Mains</a>
+        </p>
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Deserts">Deserts</a>
+        </p>
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Drinks">Drinks</a>
+        </p>
     </div>
 </body>
 
