--- a/Resturaunt_web/Views/Menus1/Drinks.cshtml
+++ b/Resturaunt_web/Views/Menus1/Drinks.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/main.css" />
     <body>
         <div class="return">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Menus1" asp-action="Index">Return</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Menus1" asp-action="Menu">Return</a>
         </div>
         <div class="menu">
             
