Revert "Updated Registered Users/Reservation tables"
This reverts commit fdb2e9a3f8224e40ea2dae7c1ddc43163728fd92.

--- a/Resturaunt_web/Views/Home/AdminHomepage.cshtml
+++ b/Resturaunt_web/Views/Home/AdminHomepage.cshtml
@@ -36,12 +36,12 @@
 
     <div class="container">
         <div class="row">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Reservations1" asp-action="Index">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">
                 <div class="AdminOption" style="width:400px; height:300px;">
                     <p>Reservation Manager</p>
                 </div>
             </a>
-            <a class="nav-link text-dark" asp-area="" asp-controller="Registered_Customers" asp-action="Index">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">
                 <div class="AdminOption" style="width:400px; height:300px;">
                     <p>User Manager</p>
                 </div>
