Changed to admin menu page

--- a/Resturaunt_web/Views/Menus1/Delete.cshtml
+++ b/Resturaunt_web/Views/Menus1/Delete.cshtml
@@ -2,9 +2,9 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/admin.css" />
+@*<link rel="stylesheet" href="~/css/admin.css" />*@
 
 <div class="return">
     <a class="nav-link text-dark" asp-area="" asp-controller="Menus1" asp-action="Index">Return</a>
@@ -14,7 +14,7 @@
 
 
 <div class="row">
-    <div class="col-md-4 container">
+    <div class="col-md-4">
 
         <dl>
             <dt class="col-sm-2">
