--- a/Resturaunt_web/Views/Reservations1/Index.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Index.cshtml
@@ -2,9 +2,9 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminHomeLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/admin.css" />
+@*<link rel="stylesheet" href="~/css/admin.css" />*@
 
 <div class="return">
     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
