--- a/Resturaunt_web/Views/Menus1/Create.cshtml
+++ b/Resturaunt_web/Views/Menus1/Create.cshtml
@@ -2,10 +2,10 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/admin.css" />
-
+@*<link rel="stylesheet" href="~/css/admin.css" />
+*@
 <div class="return">
     <a class="nav-link text-dark" asp-area="" asp-controller="Menus1" asp-action="Index">Return</a>
 </div>
@@ -13,9 +13,8 @@
 <h1>Create Item</h1>
 
 <div class="row">
-    <div class="col-md-4 container">
+    <div class="col-md-4">
         <form asp-action="Create" enctype="multipart/form-data">
-            >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ImageFile" class="control-label"></label>
