--- a/Resturaunt_web/Views/Menus1/Starters.cshtml
+++ b/Resturaunt_web/Views/Menus1/Starters.cshtml
@@ -2,18 +2,18 @@
 
     @{
     ViewData["Title"] = "Homepage";
-    Layout = "/Views/Shared/_HeaderLayout.cshtml";
+    Layout = "/Views/Shared/_AdminHomeLayout.cshtml";
     }
 
     <html>
-    <link rel="stylesheet" href="~/css/main.css" />
+    @*<link rel="stylesheet" href="~/css/main.css" />*@
     <body>
         <div class="return">
             <a class="nav-link text-dark" asp-area="" asp-controller="Menus1" asp-action="Menu">Return</a>
         </div>
         <div class="menu">
             
-            <div class="container p-4 mb-4">
+            <div class="p-4 mb-4">
                 <div class="table">
                     <table style="width:100%">
 
