--- a/Resturaunt_web/Views/Reservations1/Create.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/admin.css" />
+@*<link rel="stylesheet" href="~/css/admin.css" />*@
 
 <div class="return">
     <a class="nav-link text-dark" asp-area="" asp-controller="Reservations1" asp-action="Index">Return</a>
