admin update commit

--- a/Resturaunt_web/Views/Shared/_AdminHomeLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_AdminHomeLayout.cshtml
@@ -63,8 +63,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         
-                        <a class="collapse-item" asp-area="" asp-controller="Reservations" asp-action="Index"> Manage Reservations</a>
-                        <a class="collapse-item" asp-area="" asp-controller="Reservations" asp-action="Create"> Add a New Reservation</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Reservations1" asp-action="Index"> Manage Reservations</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Reservations1" asp-action="Create"> Add a New Reservation</a>
                     </div>
                 </div>
             </li>
