--- a/Resturaunt_web/Views/Menus1/Index.cshtml
+++ b/Resturaunt_web/Views/Menus1/Index.cshtml
@@ -6,65 +6,74 @@
 }
 @*<link rel="stylesheet" href="~/css/admin.css" />*@
 
-<div class="return">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
-</div>
+<h1>Menu</h1>
 
-<h1>Menu Manager</h1>
-
-<div class="p-4 mb-4">
-    <div class="table">
-        <p style="margin-top:10px;margin-bottom:10px;">
-            <a asp-action="Create">Create New</a>
-        </p>
-        <table style="width:100%">
-            <thead>
-                <tr>
-                    <th>
-                        Image of Food
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Name)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Description)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FoodType)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Price)
-                    </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            <img src="~/image/@item.Image" asp-append-version="true" width="100" height="100" />
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Description)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.FoodType)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Price)
-                        </td>
-                        <td>
-                            <a asp-action="Edit" asp-route-id="@item.MenuId">Edit</a>
-                            <a asp-action="Details" asp-route-id="@item.MenuId">Details</a>
-                            <a asp-action="Delete" asp-route-id="@item.MenuId">Delete</a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-</div>
+<p>
+    <a asp-action="Create">Add a new item to Menu</a>
+</p>
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page"<a asp-action="Index">Full Menu</a></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" aria-current="page"<a asp-action="Starters">Starters</a></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" aria-current="page"<a asp-action="Mains">Mains</a></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" aria-current="page"<a asp-action="Deserts">Deserts</a></</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" aria-current="page"<a asp-action="Drinks">Drinks</a></</a>
+  </li>
+  
+</ul>
+<table class="table">
+    <thead>
+        <tr>
+           <th>
+                Image
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FoodType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Price)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                <img src="~/image/@item.Image" asp-append-version = "true" width= "100" height= "100"/>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FoodType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.MenuId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.MenuId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.MenuId">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
