--- a/Resturaunt_web/Views/Shared/_AdminLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_AdminLayout.cshtml
@@ -29,7 +29,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Belly King <sup>Lt</sup></div>
+                <div class="sidebar-brand-text mx-3">Dynamic <sup>Lt</sup></div>
             </a>
 
             <!-- Divider -->
@@ -60,8 +60,8 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" asp-area="" asp-controller="Reservations" asp-action="Index"> Manage Reservations</a>
-                        <a class="collapse-item" asp-area="" asp-controller="Reservations" asp-action="Create"> Add a New Reservation</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Reservations1" asp-action="Index"> Manage Reservations</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Reservations1" asp-action="Create"> Add a New Reservation</a>
                     </div>
                 </div>
             </li>
@@ -94,8 +94,8 @@
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" asp-area="" asp-controller="Users" asp-action="Index">Manage Users</a>
-                        <a class="collapse-item" asp-area="" asp-controller="Users" asp-action="Create">Create New User</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Registered_Customers" asp-action="Index">Manage Users</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Registered_Customers" asp-action="Create">Create New User</a>
                         
                     </div>
                 </div>
