--- a/Resturaunt_web/Views/Shared/_AdminWelcome.cshtml
+++ b/Resturaunt_web/Views/Shared/_AdminWelcome.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -68,6 +67,7 @@
                     </div>
                 </div>
             </li>
+
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
@@ -171,12 +171,18 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-                            <i class="fas fa-download fa-sm text-white-50"></i> Generate Report
-                        </a>
-                    </div>
+                         <div class="col-xl-12 col-lg-7">
+                            <div class="card shadow mb-4">
+                                <!-- Card Header - Dropdown -->
+                                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <div class="container">
+                                        <main role="main" class="pb-3">
+                                            @RenderBody()
+                                        </main>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                     <!-- Content Row -->
                     <div class="row">
@@ -239,6 +245,8 @@
                                 </div>
                             </div>
                         </div>
+
+                        
                     </div>
 
                     <!-- Content Row -->
@@ -246,18 +254,7 @@
                     <div class="row">
 
                         <!-- Area Chart -->
-                        <div class="col-xl-12 col-lg-7">
-                            <div class="card shadow mb-4">
-                                <!-- Card Header - Dropdown -->
-                                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <div class="container">
-                                        <main role="main" class="pb-3">
-                                            @RenderBody()
-                                        </main>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                 
 
                         @*<!-- Pie Chart -->
                         <div class="col-xl-4 col-lg-5">
