Homepage buttons fixed and added as main

--- a/Resturaunt_web/Views/Reservations1/Reservation.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Reservation.cshtml
@@ -2,13 +2,11 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
+    Layout = "~/Views/Shared/_HomepageLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/main.css" />
+@*<link rel="stylesheet" href="~/css/main.css" />*@
 
-<div class="return">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Return</a>
-</div>
+
 
 
 
