--- a/Resturaunt_web/Views/Shared/_HomepageLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_HomepageLayout.cshtml
@@ -21,7 +21,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index1"><img src="~/HomeTheme/assets/img/Dynamic.svg" alt="..." style="width: 200px; height: 100px;" /></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/HomeTheme/assets/img/Dynamic.svg" alt="..." style="width: 200px; height: 100px;" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Menus1" asp-action="Menu">Menu</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index1">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Gallery</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Reservations1" asp-action="Create">Bookings</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Contact</a></li>
                     </ul>
