--- a/Resturaunt_web/Views/Reservations1/ResConfirmation.cshtml
+++ b/Resturaunt_web/Views/Reservations1/ResConfirmation.cshtml
@@ -1,10 +1,13 @@
 ﻿@model Resturaunt_web.Models.Reservations1
 
-@{
-    ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
-}
-@*<link rel="stylesheet" href="~/css/admin.css" />*@
+
+    @{
+    ViewData["Title"] = "ResConfirmation";
+    Layout = "/Views/Shared/_HomepageLayout.cshtml";
+    }
+
+    
+<h1>Details</h1>
 
 
 <h1>Details</h1>
