--- a/Resturaunt_web/Views/Reservations1/Reservation.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Reservation.cshtml
@@ -41,8 +41,27 @@
                 <span asp-validation-for="Booked_time" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Check avalibile times" class="btn btn-primary" />
             </div>
         </form>
+    </div>
+    <div>
+        <div class="row">
+    <div class="col-md-4 container">
+        <dl>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Reservation_Id)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Reservation_Id)
+            </dd>
+        </dl>
+    </div>
+    
+</div>
+        <form asp-action="ResConfirmation">
+    <input type="hidden" asp-for="Reservation_Id" />
+    <input type="submit" value="Check avalible times" class="btn btn-danger" /> |
+</form>
     </div>
 </div>
